sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:31: error: Unmatched closing brace '}' ignored here
}
^